# junction_detector

./: .gitignore  CMakeLists.txt  README.MD  build_and_run.sh  export_graph_input.py  junction_detector_cpu.cpp  junction_detector_gpu.cu  make_heavy_configs.py  make_synthetic_graph_inputs.py  requirements.txt  run_all_visualizations.m  run_road_network.m
configs/: config1.json  config10.json  config2.json  config3.json  config4.json  config5.json  config6.json  config7.json  config8.json  config9.json
libs/: attrs.py  find_junctions.py  geometry_helpers.py  graph.py  lane_network.py  road_topology.py  routing.py  topology.py
project_report/: project_report.tex
